# gis-wasm

./: .gitignore  Cargo.toml  LICENSE  README.md
src/geo_wasm/: bbox.rs  geo_wasm.rs  mod.rs
wasm-test/: README.md  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
wasm-test/src/: App.vue  test.json
wasm-test/src/assets/: test.json
