[package]
name = "gis-wasm"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[dependencies]
geo = "0.31.0"
geojson = "0.24.2"
serde = "1.0.228"
serde_json = "1.0.145"
wasm-bindgen = "0.2.93"
wasm-bindgen-futures = "0.4"
web-sys = { version="0.3.70", features=["console"]}
